# webrogue

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Jenkinsfile  MEMORY_BANK.md  README.md  a  append_artifacts.py  conf.sh  main.cpp  main.rs  make_webrogue.cmake  package-lock.json  typos.toml
android/runtime/: Cargo.toml  build.rs  build_native_code.sh  settings.gradle  settings.gradle.kts
android/runtime/common/: build.gradle
android/runtime/gradle/: libs.versions.toml
android/runtime/gradle/wrapper/: gradle-wrapper.properties
android/runtime/launcher/: .gitignore  Cargo.toml  build.gradle  build.gradle.kts  proguard-rules.pro
android/runtime/launcher/src/: lib.rs
android/runtime/runner/: .gitignore  build.gradle  build.gradle.kts
android/runtime/src/: lib.rs
crates/aot-compiler/: Cargo.toml
crates/aot-compiler/src/: android_gradle.rs  apple_xcode.rs  cli.rs  compile.rs  cwasm_analizer.rs  cwasm_analyzer.rs  lib.rs  linux.rs  main.rs  target.rs  utils.rs  windows_mingw.rs
crates/aot-compiler/src/android/: link.rs  mod.rs
crates/aot-compiler/src/linux/: link.rs  mod.rs
crates/aot-compiler/src/utils/: artifacts.rs  mod.rs
crates/aot-compiler/src/windows/: mingw.rs  mod.rs  msvc.rs
crates/aot-compiler/src/xcode/: build.rs  icons.rs  mod.rs  object.rs  types.rs
crates/aot-data/: Cargo.toml  build.rs
crates/aot-data/src/: lib.rs
crates/aot-lib/: Cargo.toml
crates/aot-lib/src/: lib.rs
crates/aot-linker/: CMakeLists.txt  Cargo.toml  build.rs  lldAsLib.cpp
crates/aot-linker/src/: lib.rs
crates/backend-wasmer/: Cargo.toml  build.rs
crates/backend-wasmer/src/: runtime.rs
crates/backend-wasmtime/: Cargo.toml
crates/backend_wasmer/: Cargo.toml  build.rs
crates/backend_wasmer/macro/: Cargo.toml
crates/backend_wasmtime/: Cargo.toml
crates/backend_wasmtime/macro/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: android_gen_key.rs  hub.rs  lib.rs  licenses.rs  run.rs  schema_dump.rs
crates/cli/src/hub/: debug.rs  runner.rs
crates/debugger/: Cargo.toml  README.md
crates/debugger/src/: code_runner_loop.rs  communication.rs  connection.rs  gdb_stub_loop.rs  gdb_stub_target.rs  handler.rs  lib.rs  state.rs  thread_info.rs
crates/default-runtime/: Cargo.toml  build.rs
crates/default-runtime/src/: lib.rs  main.rs  main_workspace.rs  run.rs
crates/default_runtime/: Cargo.toml
crates/default_runtime/src/: lib.rs
crates/event-apigen/: Cargo.toml
crates/event-apigen/src/: events.rs  main.rs
crates/events-apigen/: Cargo.toml  gen.sh
crates/events-apigen/src/: code_writer.rs  main.rs
crates/events-macro/: Cargo.toml
crates/events-macro/src/: lib.rs
crates/gfx/: Cargo.toml  build.rs  webrogue-gfx.wai
crates/gfx-fallback/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  webrogue_event_encoder.h  webrogue_gfx_ffi.h  webrogue_gfx_ffi_sdl.c  webrogue_gfx_ffi_sdl2.c  webrogue_gfx_ffi_sdl2.cpp  webrogue_gfx_ffi_sdl2_events.c  webrogue_gfx_ffi_sdl2_events.h  webrogue_gfx_ffi_sdl3.c  webrogue_gfx_ffi_sdl3_events.c  webrogue_gfx_ffi_sdl3_events.h  webrogue_gfx_ffi_sdl_events.c  webrogue_gfx_ffi_sdl_events.h
crates/gfx-fallback/src/: lib.rs
crates/gfx-rust-sdl/: Cargo.toml
crates/gfx-sdl/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
crates/gfx-sdl/src/: lib.rs  system.rs  window.rs
crates/gfx-winit/: Cargo.toml  build.rs
crates/gfx-winit/src/: builder.rs  events.rs  lib.rs  mailbox.rs  proxied_builder.rs  run.rs  simple_builder.rs  system.rs  utils.rs  vulkan_library.rs  webrogue_gfx_ffi_sdl.c  window.rs  window_registry.rs
crates/gfx/src/: bindings.rs  child_builder.rs  dispatch.rs  env_wrapper.rs  events_encoder.rs  ffi.rs  interface.rs  lib.rs  swiftshader.rs  system.rs  window.rs
crates/gfx/witx/: typenames.witx  webrogue_gfx.witx
crates/gfx_rust_sdl/: Cargo.toml
crates/gfxstream-lib/: Cargo.toml  build.rs  webrogue_gfxstream_impl.cpp  webrogue_gfxstream_stub.cpp
crates/gfxstream-lib/src/: lib.rs
mods/: CMakeLists.txt
mods/core/: CMakeLists.txt  core.ewrmod  core.wrmod  make_stdlib.sh
mods/core/include/: core.h  macros.h  sqlpp11.hpp  wr_api.h  wrout.hpp  wrsqlite.h
mods/core/include/common/: colors.h  events.h  wr_api_functions.def
mods/core/src/: core.cpp  exceptions.cpp  tabsample.cpp  tabsample.hpp  wrout.cpp  wrsqlite.cpp
mods/langExampleC/: CMakeLists.txt  langExampleC.c  langExampleC.ewrmod  langExampleC.wrmod
mods/langExampleCore/: CMakeLists.txt  langExampleCore.cpp  langExampleCore.ewrmod  langExampleCore.h  langExampleCore.wrmod
mods/langExampleJS/: CMakeLists.txt  langExampleJS.c
mods/langExampleJS/wrres/: example.js
mods/langExamplePascal/: .gitignore  CMakeLists.txt  build_toolchain.sh  langExamplePascal.ewrmod  langExamplePascal.pas
mods/langExamplePascal/cmake/: CMakeDeterminePascalCompiler.cmake  CMakePascalCompiler.cmake.in  CMakePascalInformation.cmake  CMakeTestPascalCompiler.cmake
mods/langExampleRust/: CMakeLists.txt  Cargo.toml  langExampleRust.ewrmod  langExampleRust.wrmod  link.sh
mods/langExampleRust/src/: lib.rs
mods/libtsm_test/: CMakeLists.txt  libtsm_test.cpp
mods/log2048/: CMakeLists.txt  log2048.cpp  log2048.ewrmod  log2048.wrmod  schema.sql  sqlpp_schema.h
mods/resExample/: CMakeLists.txt  resExample.c  resExample.ewrmod  resExample.wrmod
mods/resExample/wrres/: test_res.txt
mods/tools/: analyze_missing_symbol.py  build.cmake  download_sysroot.cmake  download_toolchain.cmake  pack_mods.py  sqlpp_scheme_generator.cmake  validate_imports.cmake
web/: CMakeLists.txt  Cargo.toml  README.md  build.sh  host.sh  main.c  to_vararg_closure.js
web/.cargo/: config.toml
web/crates/backend/: Cargo.toml
web/crates/backend-web/: Cargo.toml
web/crates/backend-web-macro/: Cargo.toml
web/crates/backend/macro/: Cargo.toml
web/crates/main/: Cargo.toml
web/crates/main/src/: em_js.c  (+4 more)
web/crates/web/: Cargo.toml
web/crates/web-macro/: Cargo.toml
web/root/: .gitignore  webrogue.html
web/src/: app.rs  bindings.rs  lib.rs  linker.rs  main_thread.rs  memory.rs  reader.rs  run.rs  sync_reader.rs  wasi_threads.rs
(+750 files in other folders)
