[package]
name = "webrogue"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
default-run = "webrogue"
rust-version = "1.90"

[[bin]]
name = "webrogue"
path = "main.rs"
doc = false

[features]
default = ["run", "compile", "pack", "hub"]
full = ["run", "compile", "pack", "hub", "appended_artifacts", "llvm"]

run = ["webrogue-cli/run"]
compile = ["webrogue-cli/compile"]
pack = ["webrogue-cli/pack"]
hub = ["webrogue-cli/hub"]

# to use this feature, you need to process resulting binary 
# using append_artifacts.py script, so it is disabled by default
appended_artifacts = ["webrogue-cli/appended_artifacts"]

# llvm feature is disabled by default so rust-analyzer don't
# have to wait while LLVM compiles
llvm = ["webrogue-cli/llvm"]

[dependencies]
webrogue-cli = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[workspace.package]
version = "0.1.0"
authors = ["Artem Borovik"]
license = "Apache-2.0 WITH LLVM-exception"
edition = "2021"

[workspace]
resolver = '2'
members = [
  "crates/aot-compiler",
  "crates/aot-data",
  "crates/aot-lib",
  "crates/cli",
  "crates/events",
  "crates/events-apigen",
  "crates/events-macro",
  "crates/gfx",
  "crates/gfx-winit",
  "crates/gfxstream",
  "crates/hub-client",
  "crates/hub-client/openapi",
  "crates/icons",
  "crates/launcher",
  "crates/launcher/server-openapi",
  "crates/launcher-dev",
  "crates/lld",
  "crates/wasip1",
  "crates/wasmtime",
  # "crates/web-macro",
  # "crates/web",
  "crates/wrapp",
  "crates/wrapp-reader",

  "android/runtime",
  "android/runtime/launcher",

  "apple/runtime/ios/rust",
  "apple/runtime/macos/rust",
]
exclude = [
  "external/wasmtime",
]

[workspace.dependencies]
# Webrogue crates
webrogue-aot-compiler = { path = "crates/aot-compiler", default-features=false }
webrogue-aot-data = { path = "crates/aot-data" }
webrogue-cli = { path = "crates/cli" }
webrogue-events = { path = "crates/events" }
webrogue-events-macro = { path = "crates/events-macro" }
webrogue-wasmtime = { path = "crates/wasmtime" }
webrogue-hub-client = { path = "crates/hub-client" }
webrogue-hub-client-openapi = { path = "crates/hub-client/openapi", default-features=false }
webrogue-icons = { path = "crates/icons" }
webrogue-gfx = { path = "crates/gfx" }
webrogue-gfx-sdl = { path = "crates/gfx-sdl" }
webrogue-gfx-winit = { path = "crates/gfx-winit" }
# webrogue-gfx-fallback = { path = "crates/gfx-fallback" }
webrogue-gfxstream = { path = "crates/gfxstream" }
webrogue-lld = { path = "crates/lld" }
webrogue-wasip1 = { path = "crates/wasip1" }
webrogue-wrapp = { path = "crates/wrapp" }
webrogue-launcher = { path = "crates/launcher" }
webrogue-launcher-server-openapi = { path = "crates/launcher/server-openapi", default-features = false }

# Platform-specific crates
# webrogue-web-macro = { path = "crates/web-macro" }

# Wasmtime
wasmtime = { path = "external/wasmtime/crates/wasmtime", default-features = false }
wiggle = { path = "external/wasmtime/crates/wiggle", default-features = false }
wasi-common = { path = "external/wasmtime/crates/wasi-common", default-features = false }
wasmtime-environ = { path = "external/wasmtime/crates/environ", default-features = false }
wiggle-generate = { path = "external/wasmtime/crates/wiggle/generate", default-features = false }
wasmtime-wasi-threads = { path = "external/wasmtime/crates/wasi-threads" }

image = { version = "0.25", default-features = false }
imageproc = { version = "0.25", default-features = false }
object = { version = "0.37.3", default-features = false }
clap = { version = "4" }
futures =  { version = "0.3" }
wasmparser = { version = ">=0.215" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1" }
zstd-safe = { version = "^7.2.4", default-features = false }
zstd = { version = "^0.13.2", default-features = false }
cc = { version = "1" }
tokio = { version = "1" }
cmake = { version = "0.1" }
target-lexicon = { version = "^0.12", default-features = false }
semver = { version = "1", default-features = false }
postcard = { version = "1", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0.25", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
witx = { version = "0.9.1", default-features = false }
dirs = { version = "6.0.0" }
zip = { version = "4.5.0", default-features = false }
libc = { version = "0.2.112", default-features = false }
lazy_static = { version = "1.5.0" }
rustix = { version = "1.0.3", default-features = false }
cfg_aliases = { version = "0.2.1" }
windows-sys = { version = "0.61.2", default-features = false }
wry = { version = "0.51", default-features = false }
tao = { version = "0.34.5", default-features = false }
winit = { version = "0.31.0-beta.2", default-features = false }
winit-android = { version = "0.31.0-beta.2", default-features = false }
winit-x11 = { version = "0.31.0-beta.2", default-features = false }
gtk = { version = "0.18.2", default-features = false }
dpi = { version = "*", default-features = false }
libloading = { version = "0.8.9", default-features = false }
ash = { version = "0.38.0", default-features = false }
ash-window = { version = "0.13.0", default-features = false }
android-activity = { version = "0.6.0", default-features = false }
log = { version = "0.4", default-features = false }
android_logger = { version = "0.11.0", default-features = false }
ndk-sys = { version = "0.6.0", default-features = false }
ndk = { version = "0.9.0", default-features = false }
json-escape = { version = "0.3.0" }
wit-bindgen = { version = "0.21.0" }
webrtc = { version = "0.14.0" }
base64 = { version = "0.22.1" }
tokio-tungstenite = { version = "*" }
futures-util = { version = "0.3" }
uuid = { version = "^1.8", default-features = false }
blake3 = { version = "1.8.2" }
async-trait = { version = "0.1.89" }

reqwest = { version = "0.12" }
zip-extract = { version = "0.4.1" }

# Profile for release builds of webrogue-aot-lib static library
[profile.aot]
inherits = "release"
lto = true
panic = "abort"
codegen-units = 1
opt-level = 3
strip = true

# Profile for release builds of CLI utility
[profile.cli]
inherits = "release"
lto = true
panic = "abort"
codegen-units = 1
opt-level = 3
strip = "debuginfo"

[profile.profiling]
inherits = "release"
debug = true

[profile.dev.package.cranelift-codegen]
opt-level = 3
codegen-units = 1

[profile.dev.package.gimli]
opt-level = 3
codegen-units = 1

[profile.dev.package.wasmtime-internal-cranelift]
opt-level = 3
codegen-units = 1

[patch.crates-io]
zstd-safe = { path = "external/zstd-rs/zstd-safe" }
zstd = { path = "external/zstd-rs" }
