[package]
name = "webrogue"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
default-run = "webrogue"
rust-version = "1.90"

[[bin]]
name = "webrogue"
path = "main.rs"
doc = false

[features]
default = ["run", "compile", "hub", "llvm"]
full = ["run", "compile", "hub", "llvm", "appended_artifacts"]

run = ["webrogue-cli/run"]
compile = ["webrogue-cli/compile"]
hub = ["webrogue-cli/hub"]
llvm = ["webrogue-cli/llvm"]

# to use this feature, you need to process resulting binary 
# using append_artifacts.py script, so it is disabled by default
appended_artifacts = ["webrogue-cli/appended_artifacts"]


[dependencies]
webrogue-cli = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[workspace.package]
version = "0.2.0"
authors = ["Artem Borovik"]
license = "Apache-2.0 WITH LLVM-exception"
edition = "2021"

[workspace]
resolver = '2'
members = [
  "crates/aot-compiler",
  "crates/aot-data",
  "crates/aot-lib",
  "crates/cli",
  "crates/cli-goodies",
  "crates/debugger",
  "crates/events",
  "crates/events-apigen",
  "crates/events-macro",
  "crates/gfx",
  "crates/gfx-winit",
  "crates/gfxstream",
  "crates/gfxstream-lib",
  "crates/hub-client",
  "crates/hub-client/openapi",
  "crates/hub-debuggee",
  "crates/icons",
  "crates/launcher",
  "crates/launcher/server-openapi",
  "crates/launcher-dev",
  "crates/licenses",
  "crates/lld",
  "crates/wasi-common",
  "crates/wasip1",
  "crates/wasmtime",
  "crates/wrapp",
  "crates/wrapp-reader",

  "android/runtime",
  "android/runtime/launcher",

  "apple/runtime/ios/rust",
  "apple/runtime/macos/rust",

  "web",
]
exclude = [
  "external/wasmtime",
]

[workspace.dependencies]
# Webrogue crates
webrogue-aot-compiler = { path = "crates/aot-compiler", default-features=false }
webrogue-aot-data = { path = "crates/aot-data" }
webrogue-cli = { path = "crates/cli" }
webrogue-cli-goodies = { path = "crates/cli-goodies" }
webrogue-events = { path = "crates/events" }
webrogue-events-macro = { path = "crates/events-macro" }
webrogue-debugger = { path = "crates/debugger" }
webrogue-wasmtime = { path = "crates/wasmtime" }
webrogue-hub-client = { path = "crates/hub-client" }
webrogue-hub-client-openapi = { path = "crates/hub-client/openapi", default-features=false }
webrogue-hub-debuggee = { path = "crates/hub-debuggee" }
webrogue-icons = { path = "crates/icons" }
webrogue-gfx = { path = "crates/gfx" }
webrogue-gfx-winit = { path = "crates/gfx-winit" }
webrogue-gfxstream = { path = "crates/gfxstream" }
webrogue-gfxstream-lib  = { path = "crates/gfxstream-lib" }
webrogue-lld = { path = "crates/lld" }
webrogue-wasi-common = { path = "crates/wasi-common", default-features = false }
webrogue-wasip1 = { path = "crates/wasip1" }
webrogue-wrapp = { path = "crates/wrapp" }
webrogue-launcher = { path = "crates/launcher" }
webrogue-launcher-server-openapi = { path = "crates/launcher/server-openapi", default-features = false }
webrogue-licenses = { path = "crates/licenses" }

# Wasmtime crates
wasmtime = { path = "external/wasmtime/crates/wasmtime", default-features = false }
wiggle = { path = "external/wasmtime/crates/wiggle", default-features = false }
wasmtime-environ = { path = "external/wasmtime/crates/environ", default-features = false }
wiggle-generate = { path = "external/wasmtime/crates/wiggle/generate", default-features = false }
wasmtime-internal-debugger = { path = "external/wasmtime/crates/debugger" }
wasmtime-internal-core = { path = "external/wasmtime/crates/core" }

# other crates
image = { version = "0.25", default-features = false }
imageproc = { version = "0.26", default-features = false }
object = { version = "0.39", default-features = false }
clap = { version = "4" }
futures =  { version = "0.3" }
wasmparser = { version = ">=0.215" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1" }
zstd-safe = { version = "^7.2.4", default-features = false }
zstd = { version = "^0.13.2", default-features = false }
cc = { version = "1" }
tokio = { version = "1" }
cmake = { version = "0.1" }
target-lexicon = { version = "^0.13", default-features = false }
semver = { version = "1", default-features = false }
postcard = { version = "1", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0.25", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
witx = { version = "0.9.1", default-features = false }
dirs = { version = "6.0.0" }
zip = { version = "8.6", default-features = false }
libc = { version = "0.2.186", default-features = false }
lazy_static = { version = "1.5.0" }
rustix = { version = "1", default-features = false }
cfg_aliases = { version = "0.2.1" }
windows-sys = { version = "0.61.2", default-features = false }
windows = { version = "0.62.2", default-features = false }
wry = { version = "0.55", default-features = false }
tao = { version = "0.35.3", default-features = false }
winit = { version = "0.31.0-beta.2", default-features = false }
winit-android = { version = "0.31.0-beta.2", default-features = false }
winit-x11 = { version = "0.31.0-beta.2", default-features = false }
winit-web = { version = "0.31.0-beta.2", default-features = false }
gtk = { version = "0.18.2", default-features = false }
dpi = { version = "*", default-features = false }
libloading = { version = "0.8.9", default-features = false }
ash = { version = "0.38.0", default-features = false }
ash-window = { version = "0.13.0", default-features = false }
android-activity = { version = "0.6.0", default-features = false }
log = { version = "0.4", default-features = false }
android_logger = { version = "0.15.1", default-features = false }
ndk-sys = { version = "0.6.0", default-features = false }
ndk = { version = "0.9.0", default-features = false }
json-escape = { version = "0.3.0" }
wit-bindgen = { version = "0.56" }
webrtc = { version = "0.17.1" }
base64 = { version = "0.22.1" }
tokio-tungstenite = { version = "*" }
futures-util = { version = "0.3" }
uuid = { version = "^1.23", default-features = false }
blake3 = { version = "1.8.2" }
async-trait = { version = "0.1.89" }
rand = { version = "0.10", default-features = false }
rand_core = { version = "0.10", default-features = false }
softbuffer = "0.4.8"
ico = "0.5.0"
tar = "0.4"
gdbstub = "0.7.10"
gdbstub_arch = "0.3.3"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.91"
parking_lot = "0.12.5"
getrandom = { version = "0.4.2", default-features = false }
reqwest = { version = "0.13" }
zip-extract = { version = "0.4.1" }
wasm_thread = { git = "https://github.com/webrogue-runtime/wasm_thread.git", rev = "daa98f6", default-features = false }
tokio-stream = "0.1"
tokio-util = { version = "0.7.18" }
tracing-subscriber = "0.3"
tracing = "0.1"
inquire = "0.9"
crossterm = "0.29"
spinners = "4.2.0"
headers = "0.4"
axum-extra = { version = "0.12" }
rustls = { version = "0.23", default-features = false }
bitflags = "2.11.1"
schemars = "1.2.1"
rcgen = "0.14.8"
p12 = "0.6.3"
xxhash-rust = "0.8.16"

# To remove
thiserror = "2.0.17"
tempfile = "3.27.0"

[profile.dev]
panic = "abort"

# Profile for release builds of webrogue-aot-lib static library
[profile.aot]
inherits = "release"
lto = true
panic = "abort"
codegen-units = 1
opt-level = 3
strip = true

# Profile for release builds of CLI utility
[profile.cli]
inherits = "release"
lto = true
panic = "abort"
codegen-units = 1
opt-level = 3
strip = "debuginfo"

[profile.profiling]
inherits = "release"
debug = true

[profile.dev.package.hashbrown]
opt-level = 3
codegen-units = 1

[profile.dev.package.cranelift-codegen]
opt-level = 3
codegen-units = 1

[profile.dev.package.regalloc2]
opt-level = 3
codegen-units = 1

[profile.dev.package.gimli]
opt-level = 3
codegen-units = 1

[profile.dev.package.wasmtime-internal-cranelift]
opt-level = 3
codegen-units = 1

[patch.crates-io]
zstd-safe = { path = "external/zstd-rs/zstd-safe" }
zstd = { path = "external/zstd-rs" }
